src/objects/Opportunity_Items__mdt.object
<CustomObject>
    <fields>
        <fullName>Appeal_Code_Id__c</fullName>
        <label>Appeal Code Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distribution_Code_Id__c</fullName>
        <label>Distribution Code Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Id__c</fullName>
        <label>Item Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Opportunity Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>Item_Id__c</columns>
        <columns>Appeal_Code_Id__c</columns>
        <columns>Distribution_Code_Id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Opportunities Items</pluralLabel>
</CustomObject>